<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="#3F51B5"
                android:paddingVertical="8sp"
                android:text="@string/boletim_escolar"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16sp"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/nomeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome" />

                <EditText
                    android:id="@+id/nomeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/insira_o_nome_do_aluno"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notasLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notas" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/primeiroBimestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/_1_bimestre"
                        android:inputType="number"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/segundoBimestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/_2_bimestre"
                        android:inputType="number"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/terceiroBimestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/_3_bimestre"
                        android:inputType="number"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <EditText
                        android:id="@+id/quartoBimestre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/_4_bimestre"
                        android:inputType="number"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="383dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/disciplina"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/calcularMedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#3F51B5"
                    android:text="@string/calcular" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mediaTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/m_dias"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/matematicaMediaLabel"
                            android:layout_width="148dp"
                            android:layout_height="wrap_content"
                            android:text="@string/matem_tica" />

                        <TextView
                            android:id="@+id/matematicaStatus"
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/resultado2"
                            android:textAlignment="textStart"
                            android:textAllCaps="false" />

                        <TextView
                            android:id="@+id/matematicaResultado"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/menos"
                            android:textAlignment="textEnd"
                            android:textAllCaps="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/portugesMediaLayout"
                            android:layout_width="94dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/portugues" />

                        <TextView
                            android:id="@+id/portuguesStatus"
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resultado1"
                            android:textAlignment="textStart" />

                        <TextView
                            android:id="@+id/portuguesResultado"
                            android:layout_width="39dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nota"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/geografiaMediaLayout"
                            android:layout_width="79dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/geografia" />

                        <TextView
                            android:id="@+id/geografiaStatus"
                            android:layout_width="58dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resultado3" />

                        <TextView
                            android:id="@+id/geografiaResultado"
                            android:layout_width="37dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nota4"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/historiaMediaLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/hist_ria" />

                        <TextView
                            android:id="@+id/historiaStatus"
                            android:layout_width="13dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resultado4" />

                        <TextView
                            android:id="@+id/historiaResultado"
                            android:layout_width="23dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nota3"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fisicaMediaLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fis_ca" />

                        <TextView
                            android:id="@+id/fisicaStatus"
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/resultado5" />

                        <TextView
                            android:id="@+id/fisicaResultado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nota2"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>